--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
     -webkit-user-select: none;
 }
 
-.suggest {
+#suggest {
     color: var(--var-sgst);
 }
 
@@ -75,13 +75,13 @@ body {
     transition: all 500ms ease;
 }
 
-.table-hidden {
-    left: -500%;
-}
-
-.codes-table {
+#codes-table {
     height: 80vh;
     margin: 15px;
+}
+
+.table-hidden {
+    left: -200%;
 }
 
 .table-header {
@@ -95,7 +95,7 @@ th {
     padding: 8px;
 }
 
-.open-table {
+#open-table {
     position: absolute;
     right: 10px;
     top: 10px;
@@ -110,11 +110,11 @@ th {
     border: 1px solid black;
 }
 
-.open-table:hover {
+#open-table:hover {
     background: var(--var-acnt);
 }
 
-.open-table:active {
+#open-table:active {
     transform: scale(0.95);
 }
 
